services responsiveness fixed, testimonials white space fixed, carousel remove fade

--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -49,10 +49,16 @@
     }
 
  
-
+    .service-card {
+        flex: 100% !important;
+        max-width: 100% !important;
+       }
+    
 
 
 }
+
+
 
 // @include media-breakpoint-down(xl) { }
 // @include media-breakpoint-down(lg) {  }
