--- a/src/styles/_services_grid.scss
+++ b/src/styles/_services_grid.scss
@@ -9,11 +9,10 @@
         font-weight: 900;
         color: black !important;
     }
- 
+
     .service {
 
-    
-  
+
         .service-overlay {
             position: absolute;
             top: 0;
@@ -56,6 +55,7 @@
 
         .color-overlay {
             background: $main-color;
+            text-align: center;
 
         }
 
@@ -70,9 +70,16 @@
     }
 }
 
+.service-card{
+    margin-bottom: 10px;
+}
+
+
+
 
 .card-img-top {
     width: 100% !important;
-    height: 15vw !important;
+    // height: 15vw !important;
+    height: 200px;
     object-fit: cover !important;
 }
